syntax = "proto3";

package golf_ws;

message RegisterUserRequest {
  string username = 1;
}

message NewGameRequest {
  string username = 1;
  int32 number_of_players = 2;
}

message JoinGameRequest {
  string username = 1;
  string game_id = 2;
}

message PeekRequest {
  string username = 1;
  string game_id = 2;
}

message DiscardDrawRequest {
  string username = 1;
  string game_id = 2;
}

enum Position {
  TOP_LEFT = 0;
  TOP_RIGHT = 1;
  BOTTOM_LEFT = 2;
  BOTTOM_RIGHT = 3;
}

message SwapForDrawRequest {
  string username = 1;
  string game_id = 2;
  Position position = 3;
}

message SwapForDiscardRequest {
  string username = 1;
  string game_id = 2;
  Position position = 3;
}

message KnockRequest {
  string username = 1;
  string game_id = 2;
}

message RequestWrapper {
  string command = 1;
  oneof kind {
    RegisterUserRequest register_user_request = 2;
    NewGameRequest new_game_request = 3;
    JoinGameRequest join_game_request = 4;
    PeekRequest peek_request = 5;
    DiscardDrawRequest discard_draw_request = 6;
    SwapForDrawRequest swap_for_draw_request = 7;
    SwapForDiscardRequest swap_for_discard_request = 8;
    KnockRequest knock_request = 9;
  }
  optional int32 id = 10;
}

message VisibleHand {
  string bottom_left = 1;
  string bottom_right = 2;
}

message GameStateResponse {
  bool all_here = 1;
  int32 discard_size = 2;
  int32 draw_size = 3;
  string game_id = 4;
  bool game_started = 5;
  bool game_over = 6;
  optional string knocker = 7;
  optional VisibleHand hand = 8;
  int32 number_of_players = 9;
  repeated string players = 10;
  repeated int32 scores = 11;
  optional string top_discard = 12;
  optional string top_draw = 13;
  bool your_turn = 14;
}

message ErrorResponse {
  string message = 1;
}

message ResponseWrapper {
  optional int32 id = 1;
  oneof kind {
    GameStateResponse response = 2;
    ErrorResponse error = 3;
  }
}
